crates/guest-macros/tests/compile_fail/unknown_key.rs
struct Provider;

omnia_guest_macros::guest!({
    owner: "examples",
    provider: Provider,
    websocket: [],
});

fn main() {}
