crates/guest-macros/tests/compile_fail/unknown_key.stderr
error: expected one of: `owner`, `provider`, `http`, `messaging`, `command`
 --> tests/compile_fail/unknown_key.rs:6:5
  |
6 |     websocket: [],
  |     ^^^^^^^^^
